@@ -1,7 +1,10 @@
 package com.twitter.finagle.mux
 
 import com.twitter.concurrent.AsyncQueue
+import com.twitter.finagle.mux.lease.exp.Lessor
 import com.twitter.finagle.netty3.{ChannelBufferBuf, BufChannelBuffer}
+import com.twitter.finagle.tracing._
+import com.twitter.finagle.transport.QueueTransport
 import com.twitter.finagle.stats.NullStatsReceiver
 import com.twitter.finagle.tracing.{BufferingTracer, Flags, Trace}
 import com.twitter.finagle.transport.QueueTransport
@@ -46,8 +49,8 @@ private[mux] class ClientServerTest(canDispatch: Boolean)
   val clientTransport =
     new QueueTransport(writeq=clientToServer, readq=serverToClient)
   val service = mock[Service[Request, Response]]
-  val client = new ClientDispatcher(clientTransport, NullStatsReceiver)
-  val server = new ServerDispatcher(serverTransport, service, canDispatch) {
+  val client = new ClientDispatcher("test", clientTransport, NullStatsReceiver)
+  val server = new ServerDispatcher(serverTransport, service, canDispatch, Lessor.nil, NullTracer) {
     private val saveReceive = receive
     receive = { msg =>
       Trace.unwind {
